neocore2/third_party/joltc-sys/src/bindings_static.rs

    pub fn JPC_BodyInterface_AddBodiesFinalize(arg0: *mut JPC_BodyInterface, arg1: *mut JPC_BodyID, arg2: c_int, arg3: *mut c_void, arg4: JPC_Activation);
    pub fn JPC_BodyInterface_AddBodiesAbort(arg0: *mut JPC_BodyInterface, arg1: *mut JPC_BodyID, arg2: c_int, arg3: *mut c_void);
    pub fn JPC_BodyInterface_RemoveBodies(arg0: *mut JPC_BodyInterface, arg1: *mut JPC_BodyID, arg2: c_int);
    pub fn JPC_BodyInterface_ActivateBody(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID);
    pub fn JPC_BodyInterface_ActivateBodies(arg0: *mut JPC_BodyInterface, arg1: *mut JPC_BodyID, arg2: c_int);
    pub fn JPC_BodyInterface_DeactivateBody(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID);
    pub fn JPC_BodyInterface_DeactivateBodies(arg0: *mut JPC_BodyInterface, arg1: *mut JPC_BodyID, arg2: c_int);
    pub fn JPC_BodyInterface_IsActive(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> bool;
    pub fn JPC_BodyInterface_SetShape(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID, arg2: *const JPC_Shape, arg3: bool, arg4: JPC_Activation);
    pub fn JPC_BodyInterface_NotifyShapeChanged(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3, arg3: bool, arg4: JPC_Activation);
    pub fn JPC_BodyInterface_SetObjectLayer(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_ObjectLayer);
    pub fn JPC_BodyInterface_GetObjectLayer(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> JPC_ObjectLayer;
    pub fn JPC_BodyInterface_SetPositionAndRotation(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_RVec3, arg3: JPC_Quat, arg4: JPC_Activation);
    pub fn JPC_BodyInterface_SetPositionAndRotationWhenChanged(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_RVec3, arg3: JPC_Quat, arg4: JPC_Activation);
    pub fn JPC_BodyInterface_GetPositionAndRotation(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID, arg2: *mut JPC_RVec3, arg3: *mut JPC_Quat);
    pub fn JPC_BodyInterface_SetPosition(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_RVec3, arg3: JPC_Activation);
    pub fn JPC_BodyInterface_GetPosition(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> JPC_RVec3;
    pub fn JPC_BodyInterface_GetCenterOfMassPosition(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> JPC_RVec3;
    pub fn JPC_BodyInterface_SetRotation(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Quat, arg3: JPC_Activation);
    pub fn JPC_BodyInterface_GetRotation(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> JPC_Quat;
    pub fn JPC_BodyInterface_MoveKinematic(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_RVec3, arg3: JPC_Quat, arg4: f32);
    pub fn JPC_BodyInterface_SetLinearAndAngularVelocity(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3, arg3: JPC_Vec3);
    pub fn JPC_BodyInterface_GetLinearAndAngularVelocity(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID, arg2: *mut JPC_Vec3, arg3: *mut JPC_Vec3);
    pub fn JPC_BodyInterface_SetLinearVelocity(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3);
    pub fn JPC_BodyInterface_GetLinearVelocity(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> JPC_Vec3;
    pub fn JPC_BodyInterface_AddLinearVelocity(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3);
    pub fn JPC_BodyInterface_AddLinearAndAngularVelocity(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3, arg3: JPC_Vec3);
    pub fn JPC_BodyInterface_SetAngularVelocity(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3);
    pub fn JPC_BodyInterface_GetAngularVelocity(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> JPC_Vec3;
    pub fn JPC_BodyInterface_GetPointVelocity(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_RVec3) -> JPC_Vec3;
    pub fn JPC_BodyInterface_SetPositionRotationAndVelocity(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_RVec3, arg3: JPC_Quat, arg4: JPC_Vec3, arg5: JPC_Vec3);
    pub fn JPC_BodyInterface_AddForce(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3);
    pub fn JPC_BodyInterface_AddTorque(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3);
    pub fn JPC_BodyInterface_AddForceAndTorque(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3, arg3: JPC_Vec3);
    pub fn JPC_BodyInterface_AddImpulse(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3);
    pub fn JPC_BodyInterface_AddImpulse3(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3, arg3: JPC_RVec3);
    pub fn JPC_BodyInterface_AddAngularImpulse(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_Vec3);
    pub fn JPC_BodyInterface_GetBodyType(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> JPC_BodyType;
    pub fn JPC_BodyInterface_SetMotionType(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_MotionType, arg3: JPC_Activation);
    pub fn JPC_BodyInterface_GetMotionType(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> JPC_MotionType;
    pub fn JPC_BodyInterface_SetMotionQuality(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: JPC_MotionQuality);
    pub fn JPC_BodyInterface_GetMotionQuality(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> JPC_MotionQuality;
    pub fn JPC_BodyInterface_GetInverseInertia(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID, arg2: *mut JPC_Mat44);
    pub fn JPC_BodyInterface_SetRestitution(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: f32);
    pub fn JPC_BodyInterface_GetRestitution(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> f32;
    pub fn JPC_BodyInterface_SetFriction(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: f32);
    pub fn JPC_BodyInterface_GetFriction(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> f32;
    pub fn JPC_BodyInterface_SetGravityFactor(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: f32);
    pub fn JPC_BodyInterface_GetGravityFactor(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> f32;
    pub fn JPC_BodyInterface_SetUseManifoldReduction(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID, arg2: bool);
    pub fn JPC_BodyInterface_GetUseManifoldReduction(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> bool;
    pub fn JPC_BodyInterface_GetUserData(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID) -> u64;
    pub fn JPC_BodyInterface_SetUserData(arg0: *const JPC_BodyInterface, arg1: JPC_BodyID, arg2: u64);
    pub fn JPC_BodyInterface_InvalidateContactCache(arg0: *mut JPC_BodyInterface, arg1: JPC_BodyID);
    pub fn JPC_NarrowPhaseQuery_CastRay(arg0: *const JPC_NarrowPhaseQuery, arg1: *mut JPC_NarrowPhaseQuery_CastRayArgs) -> bool;
    pub fn JPC_PhysicsSystem_new() -> *mut JPC_PhysicsSystem;
    pub fn JPC_PhysicsSystem_delete(arg0: *mut JPC_PhysicsSystem);
    pub fn JPC_PhysicsSystem_Init(arg0: *mut JPC_PhysicsSystem, arg1: c_uint, arg2: c_uint, arg3: c_uint, arg4: c_uint, arg5: *mut JPC_BroadPhaseLayerInterface, arg6: *mut JPC_ObjectVsBroadPhaseLayerFilter, arg7: *mut JPC_ObjectLayerPairFilter);
    pub fn JPC_PhysicsSystem_OptimizeBroadPhase(arg0: *mut JPC_PhysicsSystem);
    pub fn JPC_PhysicsSystem_Update(arg0: *mut JPC_PhysicsSystem, arg1: f32, arg2: c_int, arg3: *mut JPC_TempAllocatorImpl, arg4: *mut JPC_JobSystemThreadPool) -> JPC_PhysicsUpdateError;
    pub fn JPC_PhysicsSystem_GetBodyInterface(arg0: *mut JPC_PhysicsSystem) -> *mut JPC_BodyInterface;
    pub fn JPC_PhysicsSystem_SetContactListener(
        arg0: *mut JPC_PhysicsSystem,
        arg1: *mut JPC_ContactListener,
    );
    pub fn JPC_PhysicsSystem_GetBodySurfaceNormal(
        arg0: *const JPC_PhysicsSystem,
        arg1: JPC_BodyID,
        arg2: JPC_SubShapeID,
        arg3: JPC_RVec3,
        arg4: *mut JPC_Vec3,
    ) -> bool;
    pub fn JPC_PhysicsSystem_GetNarrowPhaseQuery(arg0: *const JPC_PhysicsSystem) -> *const JPC_NarrowPhaseQuery;
    pub fn JPC_PhysicsSystem_DrawBodies(arg0: *mut JPC_PhysicsSystem, arg1: *mut JPC_BodyManager_DrawSettings, arg2: *mut JPC_DebugRendererSimple, arg3: *const c_void);
}
